# docx_to_markdown

./: README.md  correct.md  docs_to_markdown.py  docx_to_html_markdown.py  extract_tables.py  extract_text_docx.py  extract_text_docx2python.py  extract_text_mammoth.py  input.docx  output.md  output_docx2python.md  output_html_md.md  pyproject.toml  tables_data.json
